--- a/index.html
+++ b/index.html
@@ -14,41 +14,55 @@
         <picture>
             <img src="PERFIL.png" alt="perfil">
         </picture>
-        <label>Pablo Kennediy Almeida Oliveira</label>
-        <label>Brasil, MG Uberlândia</label>
-        <label>21 anos</label>
+        <ul>
+            <li><strong>Pablo Kennediy Almeida Oliveira</strong></li>
+            <li><strong>Brasil, MG Uberlândia</strong></li>
+            <li><strong>21 anos</strong></li>
+        </ul>
     </section>
-    <aside>
-        <picture>
-            <img src="" alt="Imagens chamativa">
+        <picture id="logoPK">
+            <img src="logoPK.png" alt="Imagens chamativa">
         </picture>
+    <aside>
         <p>
-            Tenho como objetivo desenvolver ambientes digitais e fornecer assim a oportunidade de conectar pessoas.
+            Tenho como objetivo desenvolver ambientes digitai e fornecer assim a oportunidade de conectar pessoas.
         </p>
         <p>
             Aguado ancioso para um entrevista.
         </p>
-        <a href="https://www.facebook.com/profile.php?id=100016725942027">
-            <strong>
-                Facebook
-            </strong>
-        </a>
-        <a href="https://www.instagram.com/euu_pabloo/">
-            <strong>
-                Instagram
-            </strong>
-        </a>
-        <a href="https://twitter.com/PabloKennediy">
-            <strong>
-                Twitter
-            </strong>
-        </a>
+        <ul id="links">
+            <li>
+                <a href="https://www.facebook.com/profile.php?id=100016725942027">
+                    <strong>
+                        Facebook
+                    </strong>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/euu_pabloo/">
+                    <strong>
+                        Instagram
+                    </strong>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/PabloKennediy">
+                    <strong>
+                        Twitter
+                    </strong>
+                </a>
+            </li>
+        </ul>
     </aside>
     <div class="pontosPositivos">
-        <p>Ponto fortes</p>
+        <p>
+            Ponto fortes
+        </p>
     </div>
     <div class="projetos">
-        <p>Projetos</p>
+        <p>
+            Projetos
+        </p>
     </div>
 </body>
 
