--- a/index.html
+++ b/index.html
@@ -10,60 +10,107 @@
 </head>
 
 <body>
-    <section>
-        <picture>
-            <img src="PERFIL.png" alt="perfil">
-        </picture>
-        <ul>
+    <main>
+
+        <ul id="picturePerfil">
+            <picture id="PERFIL">
+                <img src="PERFIL.png" alt="perfil">
+            </picture>
             <li><strong>Pablo Kennediy Almeida Oliveira</strong></li>
             <li><strong>Brasil, MG Uberlândia</strong></li>
             <li><strong>21 anos</strong></li>
         </ul>
-    </section>
-        <picture id="logoPK">
-            <img src="logoPK.png" alt="Imagens chamativa">
-        </picture>
-    <aside>
-        <p>
-            Tenho como objetivo desenvolver ambientes digitai e fornecer assim a oportunidade de conectar pessoas.
-        </p>
-        <p>
-            Aguado ancioso para um entrevista.
-        </p>
-        <ul id="links">
-            <li>
-                <a href="https://www.facebook.com/profile.php?id=100016725942027">
-                    <strong>
-                        Facebook
-                    </strong>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/euu_pabloo/">
-                    <strong>
-                        Instagram
-                    </strong>
-                </a>
-            </li>
-            <li>
-                <a href="https://twitter.com/PabloKennediy">
-                    <strong>
-                        Twitter
-                    </strong>
-                </a>
-            </li>
-        </ul>
-    </aside>
-    <div class="pontosPositivos">
-        <p>
-            Ponto fortes
-        </p>
-    </div>
-    <div class="projetos">
-        <p>
-            Projetos
-        </p>
-    </div>
+
+        <section>
+            <picture id="logoPK">
+                <img src="logoPK.png" alt="Imagens chamativa">
+            </picture>
+            <p>
+                Tenho como objetivo desenvolver ambientes digitai e fornecer assim a oportunidade de conectar pessoas.
+            </p>
+            <p>
+                Aguado ancioso para um entrevista.
+            </p>
+        </section>
+
+        <aside id="links">
+            <ul id="links">
+
+                <li>
+                    <a href="https://www.facebook.com/profile.php?id=100016725942027">
+                        <picture>
+                            <img src="logoFacebook.jpg">
+                        </picture>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://www.instagram.com/euu_pabloo/">
+                        <picture>
+                            <img src="logoInstagram.png">
+                        </picture>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://twitter.com/PabloKennediy">
+                        <picture>
+                            <img src="logoTwitter.png">
+                        </picture>
+                    </a>
+                </li>
+
+            </ul>
+        </aside>
+
+        <div class="aspectos">
+
+            <div class="aspectosOFoxing" id="projetos">
+                <p>
+                    Projetos
+                </p>
+                <ul>
+                    <li id="android">
+                        <a href="https://pablo-kennediy.github.io/Android_Site/">
+                            <button>
+                                Android
+                            </button>
+                        </a>
+                    </li>
+
+                    <li id="netflix">
+                        <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                            <button>
+                                Netflix
+                            </button>
+                        </a>
+                    </li>
+
+                    <li id="twitter">
+                        <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                            <button>
+                                Twitter
+                            </button>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="aspectosOFoxing" id="pontosPositivos">
+                <p>
+                    Ponto fortes
+                </p>
+                <ul>
+                    <li>Proativo</li>
+                    <li>Responsavel</li>
+                    <li>Analista</li>
+                </ul>
+            </div>
+
+
+        </div>
+
+        </div>
 </body>
 
 </html>
