--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
         <div class="aspectos">
 
             <div class="aspectosOFoxing" id="projetos">
-                <p>
+                <h1>
                     Projetos
-                </p>
+                </h1>
                 <ul>
                     <li id="android">
+                        <picture id="bugdroid">
+                            <img src="bugdroid.png">
+                        </picture>
                         <a href="https://pablo-kennediy.github.io/Android_Site/">
                             <button>
                                 Android
@@ -79,6 +82,9 @@
                     </li>
 
                     <li id="netflix">
+                        <picture id="logoNetflix">
+                            <img src="logoNetflix.png">
+                        </picture>
                         <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
                             <button>
                                 Netflix
@@ -87,6 +93,9 @@
                     </li>
 
                     <li id="twitter">
+                        <picture id="logoTwitter">
+                            <img src="logoTwitter.png">
+                        </picture>
                         <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
                             <button>
                                 Twitter
@@ -97,9 +106,9 @@
             </div>
 
             <div class="aspectosOFoxing" id="pontosPositivos">
-                <p>
+                <h1>
                     Ponto fortes
-                </p>
+                </h1>
                 <ul>
                     <li>Proativo</li>
                     <li>Responsavel</li>
