--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="logoPK.png" alt="Imagens chamativa">
             </picture>
             <p>
-                Tenho como objetivo desenvolver ambientes digitai e fornecer assim a oportunidade de conectar pessoas.
+                Tenho como objetivo desenvolver ambientes digitais e assim fornecer as pessoas a oportunidade de estar mais conectadas do que nunca.
             </p>
             <p>
                 Aguado ancioso para um entrevista.
@@ -63,7 +63,7 @@
             </ul>
         </aside>
 
-        <div class="aspectos">
+        <aside class="aspectos">
 
             <div class="aspectosOFoxing" id="projetos">
                 <h1>
@@ -117,7 +117,7 @@
             </div>
 
 
-        </div>
+        </aside>
 
         </div>
 </body>
