--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                         </picture>
                     </a>
                 </li>
-
             </ul>
         </aside>
 
@@ -116,10 +115,10 @@
                 </ul>
             </div>
 
-
         </aside>
 
         </div>
+    </main>
 </body>
 
 </html>
