--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+    <picture id="logoPK">
+        <img src="logoPK.png" alt="Imagens chamativa">
+    </picture>
     <main>
-
         <ul id="picturePerfil">
             <picture id="PERFIL">
                 <img src="PERFIL.png" alt="perfil">
@@ -22,20 +24,17 @@
         </ul>
 
         <section>
-            <picture id="logoPK">
-                <img src="logoPK.png" alt="Imagens chamativa">
-            </picture>
             <p>
-                Tenho como objetivo desenvolver ambientes digitais e assim fornecer as pessoas a oportunidade de estar mais conectadas do que nunca.
+                Tenho como objetivo <strong>desenvolver ambientes</strong> digitais e assim fornecer as pessoas a
+                oportunidade de estar mais conectadas do que nunca.
             </p>
             <p>
-                Aguado ancioso para um entrevista.
+                <strong>Aguardo ancioso para um entrevista.</strong>
             </p>
         </section>
 
         <aside id="links">
             <ul id="links">
-
                 <li>
                     <a href="https://www.facebook.com/profile.php?id=100016725942027">
                         <picture>
@@ -62,58 +61,58 @@
             </ul>
         </aside>
 
-        <aside class="aspectos">
 
-            <div class="aspectosOFoxing" id="projetos">
-                <h1>
-                    Projetos
-                </h1>
-                <ul>
-                    <li id="android">
-                        <picture id="bugdroid">
-                            <img src="bugdroid.png">
-                        </picture>
-                        <a href="https://pablo-kennediy.github.io/Android_Site/">
-                            <button>
-                                Android
-                            </button>
-                        </a>
-                    </li>
 
-                    <li id="netflix">
-                        <picture id="logoNetflix">
-                            <img src="logoNetflix.png">
-                        </picture>
-                        <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
-                            <button>
-                                Netflix
-                            </button>
-                        </a>
-                    </li>
+        <div class="aspectosOFoxing" id="projetos">
+            <h1>
+                Projetos
+            </h1>
+            <ul>
+                <li id="android">
+                    <picture id="bugdroid">
+                        <img src="bugdroid.png">
+                    </picture>
+                    <a href="https://pablo-kennediy.github.io/Android_Site/">
+                        <button>
+                            Android
+                        </button>
+                    </a>
+                </li>
 
-                    <li id="twitter">
-                        <picture id="logoTwitter">
-                            <img src="logoTwitter.png">
-                        </picture>
-                        <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
-                            <button>
-                                Twitter
-                            </button>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+                <li id="netflix">
+                    <picture id="logoNetflix">
+                        <img src="logoNetflix.png">
+                    </picture>
+                    <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                        <button>
+                            Netflix
+                        </button>
+                    </a>
+                </li>
 
-            <div class="aspectosOFoxing" id="pontosPositivos">
-                <h1>
-                    Ponto fortes
-                </h1>
-                <ul>
-                    <li>Proativo</li>
-                    <li>Responsavel</li>
-                    <li>Analista</li>
-                </ul>
-            </div>
+                <li id="twitter">
+                    <picture id="logoTwitter">
+                        <img src="logoTwitter.png">
+                    </picture>
+                    <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                        <button>
+                            Twitter
+                        </button>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="aspectosOFoxing" id="pontosPositivos">
+            <h1>
+                Ponto fortes
+            </h1>
+            <ul>
+                <li>Proativo</li>
+                <li>Responsavel</li>
+                <li>Analista</li>
+            </ul>
+        </div>
 
         </aside>
 
