--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><strong>21 anos</strong></li>
         </ul>
 
-        <section>
+        <section id="intro">
             <p>
                 Tenho como objetivo <strong>desenvolver ambientes</strong> digitais e assim fornecer as pessoas a
                 oportunidade de estar mais conectadas do que nunca.
@@ -60,9 +60,7 @@
                 </li>
             </ul>
         </aside>
-
-
-
+        
         <div class="aspectosOFoxing" id="projetos">
             <h1>
                 Projetos
