--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <picture id="PERFIL">
                 <img src="PERFIL.png" alt="perfil">
             </picture>
-            <li><strong>Pablo Kennediy Almeida Oliveira</strong></li>
+            <li><strong>Sr. Pablo Kennediy Almeida Oliveira</strong></li>
             <li><strong>Brasil, MG Uberlândia</strong></li>
             <li><strong>21 anos</strong></li>
         </ul>
@@ -42,7 +42,9 @@
                         </picture>
                     </a>
                 </li>
-
+<table>
+    
+</table>
                 <li>
                     <a href="https://www.instagram.com/euu_pabloo/">
                         <picture>
@@ -66,7 +68,7 @@
                 Projetos
             </h1>
             <ul>
-                <li id="android">
+                <button id="android">
                     <picture id="bugdroid">
                         <img src="bugdroid.png">
                     </picture>
@@ -75,9 +77,9 @@
                             Android
                         </button>
                     </a>
-                </li>
+                </button>
 
-                <li id="netflix">
+                <button id="netflix">
                     <picture id="logoNetflix">
                         <img src="logoNetflix.png">
                     </picture>
@@ -86,9 +88,9 @@
                             Netflix
                         </button>
                     </a>
-                </li>
+                </button>
 
-                <li id="twitter">
+                <button id="twitter">
                     <picture id="logoTwitter">
                         <img src="logoTwitter.png">
                     </picture>
@@ -97,7 +99,7 @@
                             Twitter
                         </button>
                     </a>
-                </li>
+                </button>
             </ul>
         </div>
 
