--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 </head>
 
 <body>
-    <picture id="logoPK">
-        <img src="logoPK.png" alt="Imagens chamativa">
-    </picture>
     <main>
+        <li><h1 style="font-size: larger;">Pk Produções</h1></li>
         <ul id="picturePerfil">
             <picture id="PERFIL">
                 <img src="PERFIL.png" alt="perfil">
             </picture>
-            <li><strong>Sr. Pablo Kennediy Almeida Oliveira</strong></li>
-            <li><strong>Brasil, MG Uberlândia</strong></li>
-            <li><strong>21 anos</strong></li>
+            <li>
+                <p><strong>Desenvolvimento de Software</strong></p>
+            </li>
+            <li>
+                <p><strong>Brasil, MG Uberlândia</strong></p>
+                <p><strong>Sr. Pablo Kennediy Almeida Oliveira</strong></p>
+                <p><strong>21 anos</strong></p>
+            </li>
         </ul>
 
         <section id="intro">
