--- a/index.html
+++ b/index.html
@@ -11,92 +11,97 @@
 
 <body>
     <main>
-        <li><h1 style="font-size: larger;">Pk Produções</h1></li>
+        <li style="font-size: larger;">
+            <h1>
+                Pk Produções
+            </h1>
+            <p><strong>Desenvolvimento de Software</strong></p>
+        </li>
         <ul id="picturePerfil">
             <picture id="PERFIL">
                 <img src="PERFIL.png" alt="perfil">
             </picture>
             <li>
-                <p><strong>Desenvolvimento de Software</strong></p>
-            </li>
-            <li>
-                <p><strong>Brasil, MG Uberlândia</strong></p>
-                <p><strong>Sr. Pablo Kennediy Almeida Oliveira</strong></p>
-                <p><strong>21 anos</strong></p>
+                <p>
+                    <strong>Brasil, MG Uberlândia</strong>
+                </p>
+                <p>
+                    <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
+                </p>
+                <p>
+                    <strong>21 anos</strong>
+                </p>
             </li>
         </ul>
 
         <section id="intro">
             <p>
-                Tenho como objetivo <strong>desenvolver ambientes</strong> digitais e assim fornecer as pessoas a
-                oportunidade de estar mais conectadas do que nunca.
+                <strong style="font-size: larger
+                ;">Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
             </p>
-            <p>
+            <h1>
                 <strong>Aguardo ancioso para um entrevista.</strong>
-            </p>
+            </h1>
         </section>
 
-        <aside id="links">                
-                <h1>
-                    Clique nos botões para entrar com contato comigo
-                </h1>
+        <aside class="links">
+            <h1>
+                Clique nos botões para entrar com contato comigo
+            </h1>
 
-                <picture>
-                    <a href="https://www.facebook.com/profile.php?id=100016725942027">
-                            <img src="logoFacebook.jpg">
-                    </a>
-                </picture>
+            <picture>
+                <a href="https://www.facebook.com/profile.php?id=100016725942027">
+                    <img src="logoFacebook.jpg">
+                </a>
 
-                <picture>
-                    <a href="https://www.instagram.com/euu_pabloo/">
-                            <img src="logoInstagram.png">
-                    </a>
-                </picture>
+                <a href="https://www.instagram.com/euu_pabloo/">
+                    <img src="logoInstagram.png">
+                </a>
 
-                <picture>
-                    <a href="https://twitter.com/PabloKennediy">
-                            <img src="logoTwitter.png">
-                    </a>
-                </picture>
+                <a href="https://twitter.com/PabloKennediy">
+                    <img src="logoTwitter.png">
+                </a>
+            </picture>
+
         </aside>
-        
+
         <div class="aspectosOFoxing" id="projetos">
             <h1>
                 Projetos
             </h1>
             <ul>
-                <button id="android">
-                    <picture id="bugdroid">
-                        <img src="bugdroid.png">
-                    </picture>
-                    <a href="https://pablo-kennediy.github.io/Android_Site/">
-                        <button>
-                            Android
-                        </button>
-                    </a>
-                </button>
-
-                <button id="netflix">
-                    <picture id="logoNetflix">
-                        <img src="logoNetflix.png">
-                    </picture>
-                    <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
-                        <button>
-                            Netflix
-                        </button>
-                    </a>
-                </button>
-
-                <button id="twitter">
-                    <picture id="logoTwitter">
-                        <img src="logoTwitter.png">
-                    </picture>
-                    <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
-                        <button>
-                            Twitter
-                        </button>
-                    </a>
-                </button>
+                <li>
+                    <button id="android">
+                        <picture id="bugdroid">
+                            <img src="bugdroid.png">
+                        </picture>
+                        <a href="https://pablo-kennediy.github.io/Android_Site/">
+                            <button>
+                                Android
+                            </button>
+                        </a>
+                    </button>
+                    <button id="netflix">
+                        <picture id="logoNetflix">
+                            <img src="logoNetflix.png">
+                        </picture>
+                        <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                            <button>
+                                Netflix
+                            </button>
+                        </a>
+                    </button>
+                    <button id="twitter">
+                        <picture id="logoTwitter">
+                            <img src="logoTwitter.png">
+                        </picture>
+                        <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                            <button>
+                                Twitter
+                            </button>
+                        </a>
+                    </button>
+                </li>
             </ul>
         </div>
 
