--- a/index.html
+++ b/index.html
@@ -65,44 +65,35 @@
 
         </aside>
 
-        <div class="aspectosOFoxing" id="projetos">
+        <li class="projetos">
             <h1>
                 Projetos
             </h1>
-            <ul>
-                <li>
                     <button id="android">
                         <picture id="bugdroid">
                             <img src="bugdroid.png">
                         </picture>
                         <a href="https://pablo-kennediy.github.io/Android_Site/">
-                            <button>
                                 Android
-                            </button>
                         </a>
-                    </button>
+
                     <button id="netflix">
                         <picture id="logoNetflix">
                             <img src="logoNetflix.png">
                         </picture>
                         <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
-                            <button>
                                 Netflix
-                            </button>
                         </a>
                     </button>
+
                     <button id="twitter">
                         <picture id="logoTwitter">
                             <img src="logoTwitter.png">
                         </picture>
                         <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
-                            <button>
                                 Twitter
-                            </button>
                         </a>
                     </button>
-                </li>
-            </ul>
         </div>
 
         <div class="aspectosOFoxing" id="pontosPositivos">
