--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
 
         <aside class="links">
-            <h1>
+            <h1 style="padding-bottom: 25px;">
                 Clique nos botões para entrar com contato comigo
             </h1>
 
@@ -65,48 +65,49 @@
 
         </aside>
 
-        <li class="projetos">
-            <h1>
-                Projetos
-            </h1>
-                    <button id="android">
-                        <picture id="bugdroid">
-                            <img src="bugdroid.png">
-                        </picture>
-                        <a href="https://pablo-kennediy.github.io/Android_Site/">
-                                Android
-                        </a>
-
-                    <button id="netflix">
-                        <picture id="logoNetflix">
-                            <img src="logoNetflix.png">
-                        </picture>
-                        <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
-                                Netflix
-                        </a>
-                    </button>
-
-                    <button id="twitter">
-                        <picture id="logoTwitter">
-                            <img src="logoTwitter.png">
-                        </picture>
-                        <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
-                                Twitter
-                        </a>
-                    </button>
-        </div>
-
-        <div class="aspectosOFoxing" id="pontosPositivos">
+        <li>
             <h1>
                 Ponto fortes
             </h1>
-            <ul>
-                <li>Proativo</li>
-                <li>Responsavel</li>
-                <li>Analista</li>
-            </ul>
-        </div>
-        </div>
+            <p>
+                Proativo
+            </p>
+            <p>
+                Responsavel
+            </p>
+            <p style="padding-bottom: 25px;">
+                Analista
+            </p>
+            <h1>
+                Projetos
+            </h1>
+            <section>
+                <button id="android">
+                    <picture id="bugdroid">
+                        <img src="bugdroid.png">
+                    </picture>
+                    <a href="https://pablo-kennediy.github.io/Android_Site/">
+                        Android
+                    </a>
+                </button>
+                <button id="netflix">
+                    <picture id="logoNetflix">
+                        <img src="logoNetflix.png">
+                    </picture>
+                    <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                        Netflix
+                    </a>
+                </button>
+                <button id="twitter">
+                    <picture id="logoTwitter">
+                        <img src="logoTwitter.png">
+                    </picture>
+                    <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                        Twitter
+                    </a>
+                </button>
+            </section>
+        </li>
     </main>
 </body>
 
