--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <h1>
                 Pk Produções
             </h1>
-            <p><strong>Desenvolvimento de Software</strong></p>
+            <p>
+                <strong>Desenvolvimento de Software</strong>
+            </p>
         </li>
         <ul id="picturePerfil">
             <picture id="PERFIL">
