--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
         </aside>
 
-        <li>
+        <li id="pontosFortes">
             <h1>
-                Ponto fortes
+                Pontos fortes
             </h1>
             <p>
                 Proativo
