--- a/index.html
+++ b/index.html
@@ -19,27 +19,24 @@
                 <strong>Desenvolvimento de Software</strong>
             </p>
         </li>
-        <ul id="picturePerfil">
             <picture id="PERFIL">
                 <img src="PERFIL.png" alt="perfil">
             </picture>
-            <li>
-                <p>
-                    <strong>Brasil, MG Uberlândia</strong>
-                </p>
-                <p>
-                    <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
-                </p>
-                <p>
-                    <strong>21 anos</strong>
-                </p>
-            </li>
-        </ul>
 
+        <aside class="links">
+            <p>
+                <strong>Brasil, MG Uberlândia</strong>
+            </p>
+            <p>
+                <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
+            </p>
+            <p>
+                <strong>21 anos</strong>
+            </p>
+        </aside>
         <section id="intro">
             <p>
-                <strong style="font-size: larger
-                ;">Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
+                <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
             </p>
             <h1>
                 <strong>Aguardo ancioso para um entrevista.</strong>
@@ -67,7 +64,7 @@
 
         </aside>
 
-        <li id="pontosFortes">
+        <aside class="links">
             <h1>
                 Pontos fortes
             </h1>
@@ -109,7 +106,7 @@
                     </a>
                 </button>
             </section>
-        </li>
+        </aside>
     </main>
 </body>
 
