--- a/index.html
+++ b/index.html
@@ -11,105 +11,103 @@
 
 <body>
     <main>
-        <li style="font-size: larger;">
+        <section>
             <h1>
                 Pk Produções
             </h1>
             <p>
                 <strong>Desenvolvimento de Software</strong>
             </p>
-        </li>
-        <ul id="picturePerfil">
-            <picture id="PERFIL">
-                <img src="PERFIL.png" alt="perfil">
-            </picture>
-            <li>
+            <ul >
+                <picture id="picturePerfil">
+                    <img id="PERFIL" src="PERFIL.png" alt="perfil">
+                        <p>
+                            <strong>Brasil, MG Uberlândia</strong>
+                        </p>
+                        <p>
+                            <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
+                        </p>
+                        <p>
+                            <strong>21 anos</strong>
+                        </p>
+                </picture>
+            </ul>
+
+            <section id="intro">
                 <p>
-                    <strong>Brasil, MG Uberlândia</strong>
+                    <strong style="font-size: larger
+                    ;">Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
                 </p>
-                <p>
-                    <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
-                </p>
-                <p>
-                    <strong>21 anos</strong>
-                </p>
-            </li>
-        </ul>
-
-        <section id="intro">
-            <p>
-                <strong style="font-size: larger
-                ;">Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
-            </p>
-            <h1>
-                <strong>Aguardo ancioso para um entrevista.</strong>
-            </h1>
-        </section>
-
-        <aside class="links">
-            <h1 style="padding-bottom: 25px;">
-                Clique nos botões para entrar com contato comigo
-            </h1>
-
-            <picture>
-                <a href="https://www.facebook.com/profile.php?id=100016725942027">
-                    <img src="logoFacebook.jpg">
-                </a>
-
-                <a href="https://www.instagram.com/euu_pabloo/">
-                    <img src="logoInstagram.png">
-                </a>
-
-                <a href="https://twitter.com/PabloKennediy">
-                    <img src="logoTwitter.png">
-                </a>
-            </picture>
-
-        </aside>
-
-        <li>
-            <h1>
-                Ponto fortes
-            </h1>
-            <p>
-                Proativo
-            </p>
-            <p>
-                Responsavel
-            </p>
-            <p style="padding-bottom: 25px;">
-                Analista
-            </p>
-            <h1>
-                Projetos
-            </h1>
-            <section>
-                <button id="android">
-                    <picture id="bugdroid">
-                        <img src="bugdroid.png">
-                    </picture>
-                    <a href="https://pablo-kennediy.github.io/Android_Site/">
-                        Android
-                    </a>
-                </button>
-                <button id="netflix">
-                    <picture id="logoNetflix">
-                        <img src="logoNetflix.png">
-                    </picture>
-                    <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
-                        Netflix
-                    </a>
-                </button>
-                <button id="twitter">
-                    <picture id="logoTwitter">
-                        <img src="logoTwitter.png">
-                    </picture>
-                    <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
-                        Twitter
-                    </a>
-                </button>
+                <h1>
+                    <strong>Aguardo ancioso para um entrevista.</strong>
+                </h1>
             </section>
-        </li>
+
+            <aside class="links">
+                <h1 style="padding-bottom: 25px;">
+                    Clique nos botões para entrar com contato comigo
+                </h1>
+
+                <picture>
+                    <a href="https://www.facebook.com/profile.php?id=100016725942027">
+                        <img src="logoFacebook.jpg">
+                    </a>
+
+                    <a href="https://www.instagram.com/euu_pabloo/">
+                        <img src="logoInstagram.png">
+                    </a>
+
+                    <a href="https://twitter.com/PabloKennediy">
+                        <img src="logoTwitter.png">
+                    </a>
+                </picture>
+
+            </aside>
+
+            <li>
+                <h1>
+                    Ponto fortes
+                </h1>
+                <p>
+                    Proativo
+                </p>
+                <p>
+                    Responsavel
+                </p>
+                <p style="padding-bottom: 25px;">
+                    Analista
+                </p>
+                <h1>
+                    Projetos
+                </h1>
+                <section>
+                    <button id="android">
+                        <picture id="bugdroid">
+                            <img src="bugdroid.png">
+                        </picture>
+                        <a href="https://pablo-kennediy.github.io/Android_Site/">
+                            Android
+                        </a>
+                    </button>
+                    <button id="netflix">
+                        <picture id="logoNetflix">
+                            <img src="logoNetflix.png">
+                        </picture>
+                        <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                            Netflix
+                        </a>
+                    </button>
+                    <button id="twitter">
+                        <picture id="logoTwitter">
+                            <img src="logoTwitter.png">
+                        </picture>
+                        <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                            Twitter
+                        </a>
+                    </button>
+                </section>
+            </li>
+        </section>
     </main>
 </body>
 
