--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <p>
                 <strong>Desenvolvimento de Software</strong>
             </p>
-            <ul >
                 <picture id="picturePerfil">
                     <img id="PERFIL" src="PERFIL.png" alt="perfil">
                         <p>
@@ -31,82 +30,72 @@
                             <strong>21 anos</strong>
                         </p>
                 </picture>
-            </ul>
+            <p>
+                <strong style="font-size: larger
+                ;">Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
+            </p>
+            <h1>
+                <strong>Aguardo ancioso para um entrevista.</strong>
+            </h1>
+                <aside class="links">
+                    <h1 style="padding-bottom: 25px;">
+                        Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
+                    </h1>
+                        <picture>
+                            <a href="https://www.facebook.com/profile.php?id=100016725942027">
+                                <source src="logoFacebook.jpg" type="">
+                            </a>
 
-            <section id="intro">
-                <p>
-                    <strong style="font-size: larger
-                    ;">Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
-                </p>
-                <h1>
-                    <strong>Aguardo ancioso para um entrevista.</strong>
-                </h1>
-            </section>
+                            <a href="https://www.instagram.com/euu_pabloo/">
+                                <img src="logoInstagram.png">
+                            </a>
 
-            <aside class="links">
-                <h1 style="padding-bottom: 25px;">
-                    Clique nos botões para entrar com contato comigo
-                </h1>
-
-                <picture>
-                    <a href="https://www.facebook.com/profile.php?id=100016725942027">
-                        <img src="logoFacebook.jpg">
-                    </a>
-
-                    <a href="https://www.instagram.com/euu_pabloo/">
-                        <img src="logoInstagram.png">
-                    </a>
-
-                    <a href="https://twitter.com/PabloKennediy">
-                        <img src="logoTwitter.png">
-                    </a>
-                </picture>
-
-            </aside>
-
-            <li>
-                <h1>
-                    Ponto fortes
-                </h1>
-                <p>
-                    Proativo
-                </p>
-                <p>
-                    Responsavel
-                </p>
-                <p style="padding-bottom: 25px;">
-                    Analista
-                </p>
-                <h1>
-                    Projetos
-                </h1>
-                <section>
-                    <button id="android">
-                        <picture id="bugdroid">
-                            <img src="bugdroid.png">
+                            <a href="https://twitter.com/PabloKennediy">
+                                <img src="logoTwitter.png">
+                            </a>
                         </picture>
-                        <a href="https://pablo-kennediy.github.io/Android_Site/">
-                            Android
-                        </a>
-                    </button>
-                    <button id="netflix">
-                        <picture id="logoNetflix">
-                            <img src="logoNetflix.png">
-                        </picture>
-                        <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
-                            Netflix
-                        </a>
-                    </button>
-                    <button id="twitter">
-                        <picture id="logoTwitter">
-                            <img src="logoTwitter.png">
-                        </picture>
-                        <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
-                            Twitter
-                        </a>
-                    </button>
-                </section>
-            </li>
+                </aside>
+                    <aside>
+                        <h1>
+                            Ponto fortes
+                        </h1>
+                        <p>
+                            Proativo
+                        </p>
+                        <p>
+                            Responsavel
+                        </p>
+                        <p style="padding-bottom: 25px;">
+                            Analista
+                        </p>
+                        <h1>
+                            Projetos
+                        </h1>
+                            <button id="android">
+                                <picture id="bugdroid">
+                                    <img src="bugdroid.png">
+                                </picture>
+                                <a href="https://pablo-kennediy.github.io/Android_Site/">
+                                    Android
+                                </a>
+                            </button>
+                            <button id="netflix">
+                                <picture id="logoNetflix">
+                                    <img src="logoNetflix.png">
+                                </picture>
+                                <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                                    Netflix
+                                </a>
+                            </button>
+                            <button id="twitter">
+                                <picture id="logoTwitter">
+                                    <img src="logoTwitter.png">
+                                </picture>
+                                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                                    Twitter
+                                </a>
+                            </button>
+                    </aside>
         </section>
     </main>
 </body>
